[build-system]
requires = [
    "setuptools>=18.0",
    # "cython @ git+https://github.com/ap--/cython.git@compile-seabreeze#egg=cython",
    "wheel>=0.31.0",
    "setuptools_scm",
    "pkgconfig"  # this should be Linux only, but PEP508 is not supported yet in pyproject.toml
    ]

[project]
name = "seabreeze_c_backend"
description = "Seabreeze C Backend. Use together with `seabreeze` package."
license.file = "LICENSE.md"
authors = [
  { name = "Andreas Poehlmann", email = "andreas@poehlmann.io" }
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.20.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/ap--/seabreeze-c-backend"
Source = "https://github.com/ap--/seabreeze-c-backend"


[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"
py_version = "38"

[tool.cibuildwheel]
build-verbosity = 2
skip = ["*-musllinux_*", "pp*"]
test-command = [
    "python -c \"import seabreeze_c_backend\"",
]

[tool.cibuildwheel.linux]
before-build = "yum install -y libusb-devel"

[tool.mypy]
python_version = "3.8"
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = "./src/**/*.py"
exclude = """
(?x)(
   ^build|
   ^docs|
   ^tests|
   setup.py
)
"""

[[tool.mypy.overrides]]
module = "seabreeze_c_backend._libseabreeze_wrapper"
ignore_missing_imports = true

[tool.cython-lint]
ignore = ['E501']
